tests/ui/consts/const_refs_to_static-ice-121413.edition2015.stderr
error[E0433]: failed to resolve: use of undeclared type `AtomicUsize`
  --> $DIR/const_refs_to_static-ice-121413.rs:11:24
   |
LL |     static FOO: Sync = AtomicUsize::new(0);
   |                        ^^^^^^^^^^^ use of undeclared type `AtomicUsize`
   |
help: consider importing this struct
   |
LL + use std::sync::atomic::AtomicUsize;
   |

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/const_refs_to_static-ice-121413.rs:11:17
   |
LL |     static FOO: Sync = AtomicUsize::new(0);
   |                 ^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` on by default
help: `static` can't be unsized; use a boxed trait object
   |
LL |     static FOO: Box<dyn Sync> = AtomicUsize::new(0);
   |                 +++++++     +

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/const_refs_to_static-ice-121413.rs:11:17
   |
LL |     static FOO: Sync = AtomicUsize::new(0);
   |                 ^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: `static` can't be unsized; use a boxed trait object
   |
LL |     static FOO: Box<dyn Sync> = AtomicUsize::new(0);
   |                 +++++++     +

error[E0277]: the size for values of type `(dyn Sync + 'static)` cannot be known at compilation time
  --> $DIR/const_refs_to_static-ice-121413.rs:11:17
   |
LL |     static FOO: Sync = AtomicUsize::new(0);
   |                 ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Sync + 'static)`

error[E0277]: the size for values of type `(dyn Sync + 'static)` cannot be known at compilation time
  --> $DIR/const_refs_to_static-ice-121413.rs:11:24
   |
LL |     static FOO: Sync = AtomicUsize::new(0);
   |                        ^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Sync + 'static)`
   = note: constant expressions must have a statically known size

error: aborting due to 3 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0277, E0433.
For more information about an error, try `rustc --explain E0277`.
